--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Game</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div id="app" class="wrapper"></div>
+    </main>
+  </body>
 </html>
