basic template set up

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,21 @@
     <title>Quiz Game</title>
   </head>
   <body>
+    <header>
+      <div class="wrapper">
+        <h1>Quiz Game</h1>
+      </div>
+    </header>
     <main>
       <div id="app" class="wrapper"></div>
     </main>
+    <footer>
+      <div class="wrapper">
+        <p>
+          Made with ❤️ by
+          <a href="http://antonhansson.net" target="_blank">Anton Hansson</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
