--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <h1>Quiz Game</h1>
+        <h1 class="logo">Quiz Game</h1>
       </div>
     </header>
     <main>
