--- a/src/template.html
+++ b/src/template.html
@@ -5,22 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Game</title>
   </head>
-  <body>
-    <header>
-      <div class="wrapper">
-        <h1 class="logo">Quiz Game</h1>
-      </div>
-    </header>
-    <main>
-      <div id="app" class="wrapper"></div>
-    </main>
-    <footer>
-      <div class="wrapper">
-        <p>
-          Made with ❤️ by
-          <a href="http://antonhansson.net" target="_blank">Anton Hansson</a>
-        </p>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
